<resources>
    <string name="app_name">PhotoP</string>
    <string name="title_activity_maps2">Map</string>
    <string name="sign_out">Sign Out</string>
    <string name="saves">Saves</string>
    <string name="settings">Settings</string>
    <string name="upload">Upload</string>
    <string name="match_name">Match\'s Name</string>
    <string name="uploader_name">Uploader\'s name</string>
    <string name="uploader_phone">Uploader\'s phone</string>
    <string name="match_id">Match\'s ID</string>
    <string name="lat">Lat</string>
    <string name="lng">Lng</string>
    <string name="description">Description</string>
    <string name="pizza">Pizza</string>
    <string name="chinese">Chinese</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="vegan">Vegan</string>
    <string name="italian">Italian</string>
    <string name="dessert">Dessert</string>
    <string name="brunch">Brunch</string>
    <string name="mexican">Mexican</string>
    <string name="confirm">confirm</string>
    <string name="back">back</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="business_name">Business Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="individual">Individual</string>
    <string name="owner">Owner</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="login_lc">login</string>
    <string name="register">Register</string>
    <string name="register_lc">register</string>
    <string name="distance_format">%d miles</string>
</resources>
