<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadActivity"
    android:orientation="vertical"
    android:padding="@dimen/margin_medium">

    <ImageView
        android:layout_width="@dimen/image_width_large"
        android:layout_height="@dimen/image_height_large"
        android:id="@+id/foodPhoto"
        android:src="@mipmap/ic_launcher_foreground"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_medium">
    </ImageView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:background="@null"
        android:hint="@string/description"
        android:layout_marginBottom="@dimen/margin_medium" />
    <RadioGroup
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pizza"

            android:text="@string/pizza" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chinese"

            android:text="@string/chinese" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/glutenfree"

            android:text="@string/gluten_free" />

        <CheckBox
            android:id="@+id/vegan"
            android:layout_width="107dp"
            android:layout_height="wrap_content"

            android:text="@string/vegan" />

    </RadioGroup>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/italian"

            android:text="@string/italian" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dessert"

            android:text="@string/dessert" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/brunch"

            android:text="@string/brunch" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mexican"

            android:text="@string/mexican" />

    </LinearLayout>
    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_gravity="center"
        android:id="@+id/rating"
        android:numStars="5">

    </RatingBar>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirm"
        android:text="@string/confirm"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/back"
        android:text="@string/back"/>
</LinearLayout>