<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_medium">

    <ImageView
        android:layout_width="@dimen/image_width_small"
        android:layout_height="@dimen/image_height_small"
        android:src="@mipmap/ic_launcher"
        android:id="@+id/MatchImage" />

    <LinearLayout
        android:padding="@dimen/margin_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/match_name"
            android:layout_gravity="center"
            android:id="@+id/MatchName"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uploader_name"
            android:layout_gravity="center"
            android:id="@+id/MatchUploadUserName"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uploader_phone"
            android:layout_gravity="center"
            android:id="@+id/MatchPhone"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/match_id"
            android:layout_gravity="center"
            android:id="@+id/MatchId"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lat"
            android:layout_gravity="center"
            android:id="@+id/MatchLat"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lng"
            android:layout_gravity="center"
            android:id="@+id/MatchLng"/>

    </LinearLayout>


</LinearLayout>